--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
         <form id="login-form">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" pattern="[a-zA-Z_]{18,}">
-                <small>Username should contain at least 18 characters and only alphabets and underscore.</small>
+                <input type="text" id="username" name="username" pattern="[a-zA-Z_]+">
+                <small> </small>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
